--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "app-psicomentalia",
+  "version": "2.0.0",
   "private": true,
-  "version": "1.0.0",
   "type": "module",
+  "description": "Aplicación de apoyo para personas con TDAH - Herramientas de organización y bienestar",
+  "author": "Psicomentalia",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "dev:local": "VITE_DB_MODE=localStorage vite",
-    "dev:emulator": "VITE_DB_MODE=emulator vite",
-    "dev:firebase": "VITE_DB_MODE=firebase vite",
-    "emulators": "firebase emulators:start",
-    "emulators:init": "firebase init emulators",
-    "emulators:data": "node scripts/emulator-data.js",
     "build": "vite build",
     "preview": "vite preview",
-    "setup": "sh setup-local.sh"
+    "emulator": "firebase emulators:start",
+    "emulator:export": "firebase emulators:export ./emulator-data",
+    "emulator:import": "firebase emulators:start --import=./emulator-data",
+    "emulators:data": "node scripts/emulator-data.js",
+    "deploy": "npm run build && firebase deploy",
+    "deploy:hosting": "npm run build && firebase deploy --only hosting",
+    "deploy:rules": "firebase deploy --only firestore:rules",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{js,jsx,json,css}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,json,css}\"",
+    "clean": "rm -rf dist node_modules/.vite",
+    "reset": "npm run clean && npm install",
+    "test": "echo \"No tests configured yet\" && exit 0"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -28,6 +37,27 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.8",
-    "vite-plugin-pwa": "^0.17.0"
+    "vite-plugin-pwa": "^0.17.0",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3.1.1"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
